--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "dom": "^0.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-jss": "^10.9.0",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
+    "rooks": "^5.11.8",
+    "use-axios-client": "^2.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
