--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dom": "^0.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.33.1",
     "react-jss": "^10.9.0",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
